custom scrollbar, ws issue fixed, login issue fixed

--- a/frontend_files/global_styles.css
+++ b/frontend_files/global_styles.css
@@ -13,7 +13,8 @@ body {
     padding: 1em 1em 1em 1em;
 
     font-family: sans-serif;
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
+    background-color: var(--tenary-color);
     color: var(--primary-text-color);
     /* font-size: 1.05em; */
 }
@@ -60,7 +61,9 @@ a:hover {
     text-decoration: underline;
 }
 
-.unstyled-link, .unstyled-link:hover, .unstyled-link:visited {
+.unstyled-link,
+.unstyled-link:hover,
+.unstyled-link:visited {
     color: var(--primary-text-color);
     text-decoration: none;
 }
@@ -90,4 +93,18 @@ code {
 .divider-small {
     margin: .3em 2.1em .3em 2.1em;
     border-bottom: 1px solid var(--secondary-color);
+}
+
+
+*.unselectable {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+
+    /*
+      Introduced in IE 10.
+      See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
+    */
+    -ms-user-select: none;
+    user-select: none;
 }
